<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/group1"
    android:title="Account Preference">

    <menu>

        <item
            android:id="@+id/change_username"
            android:checked="false"
            android:icon="@drawable/username"
            android:title="@string/drawer_username" />

        <item
            android:id="@+id/change_email"
            android:checked="false"
            android:icon="@drawable/email"
            android:title="@string/drawer_email" />

    </menu>

</item>

    <item
        android:id="@+id/group2"
        android:title="Others">

        <menu>

            <item
                android:id="@+id/display_piechart"
                android:checked="false"
                android:icon="@drawable/piechart"
                android:title="@string/drawer_display_piechart" />

            <item
                android:id="@+id/add_wishes"
                android:checked="false"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/drawer_add_wishes" />

            <item
                android:id="@+id/backup_data"
                android:checked="false"
                android:icon="@drawable/backup"
                android:title="@string/action_backup_data" />

            <item
                android:id="@+id/setting"
                android:checked="false"
                android:icon="@drawable/setting"
                android:title="@string/drawer_setting" />

        </menu>

    </item>




</menu>