<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190sp"
    android:background="@drawable/drawer"
    android:orientation="vertical">

   <TextView
       android:text="@string/profile_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/profile"
       android:textColor="@android:color/white"
       android:gravity="center"
       android:textSize="28sp"
       android:textStyle="bold"
       android:layout_centerVertical="true"
       android:layout_alignEnd="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:paddingLeft="8sp"
        android:layout_above="@+id/email"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_email"
        android:paddingLeft="8sp"
        android:paddingTop="4sp"
        android:paddingBottom="4sp"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>

 </RelativeLayout>