<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/view_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="com.wanching.birthdayreminder.Activities.ViewBirthdayActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        style="@style/CommonLayoutWidthHeight">

    </android.support.design.widget.AppBarLayout>

    <Switch
        android:id="@+id/view_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_below="@id/appbar_layout"
        style="@style/CommonLayoutWidthHeight">

        <LinearLayout
            style="@style/CommonLayoutWidthHeight"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/image"
                android:layout_margin="16sp"/>

            <TextView
                android:id="@+id/show_email"
                android:text="@string/email_address"
                style="@style/CommonTextView"/>

            <TextView
                android:id="@+id/show_phone"
                android:text="@string/phone"
                style="@style/CommonTextView"/>

            <TextView
                android:id="@+id/date"
                android:text="@string/bithday_date"
                android:textStyle="bold"
                style="@style/CommonTextView"/>

            <LinearLayout
                style="@style/CommonLayoutWidthHeight"
                android:orientation="horizontal"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp">

                <TextView
                    android:id="@+id/day"
                    android:text="00"
                    style="@style/CommonTextView1"/>

                <TextView
                    android:text="d"
                    style="@style/CommonTextView2"/>

                <TextView
                    android:id="@+id/hour"
                    android:text="00"
                    style="@style/CommonTextView1"/>

                <TextView
                    android:text="h"
                    style="@style/CommonTextView2"/>

                <TextView
                    android:id="@+id/minute"
                    android:text="00"
                    style="@style/CommonTextView1"/>

                <TextView
                    android:text="m"
                    style="@style/CommonTextView2"/>

                <TextView
                    android:id="@+id/second"
                    android:text="00"
                    style="@style/CommonTextView1"/>

                <TextView
                    android:text="s"
                    style="@style/CommonTextView2"/>

            </LinearLayout>

            <TextView
                android:id="@+id/left"
                android:text="@string/day_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        style="@style/CommonLayoutWidthHeight"
        android:layout_margin="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            style="@style/CommonLayoutWidthHeight"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnEdit"
                android:src="@android:drawable/ic_menu_edit"
                android:onClick="editBirthday"
                style="@style/CommonImageButton"/>

            <ImageButton
                android:id="@+id/btnMessage"
                android:src="@android:drawable/sym_action_email"
                android:onClick="messageWish"
                style="@style/CommonImageButton"/>

            <ImageButton
                android:id="@+id/btnDelete"
                android:src="@android:drawable/ic_menu_delete"
                android:onClick="deleteBirthday"
                style="@style/CommonImageButton"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
